<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_designer_background"
    tools:context=".Login.PendingApprovalActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:id="@+id/mainrel">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="5dp"
                android:visibility="gone"
                android:src="@drawable/ic_back_white"
                android:id="@+id/back"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:text="@string/company_name"
                android:textColor="@color/white"
                android:fontFamily="@font/bodoni"
                android:textSize="36dp"
                android:id="@+id/company_name_text"/>


            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_check_green"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="46dp"
                android:layout_below="@+id/company_name_text"
                android:id="@+id/green_check_image"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/green_check_image"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:layout_marginTop="24dp"
                android:text="@string/pending_text"
                android:fontFamily="@font/spd_medium"
                android:id="@+id/pending_text"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/pending_text"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textColor="@color/linkBlue"
                android:textSize="18dp"
                android:paddingVertical="12dp"
                android:layout_marginTop="36dp"
                android:text="@string/queries_text"
                android:fontFamily="@font/spd_medium"
                android:id="@+id/contact_us_text"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/contact_us_text"
                android:layout_marginTop="120dp"
                android:paddingVertical="18dp"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/spd_medium"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:background="@drawable/white_rounded_corners"
                android:text="@string/continue_browsing_text"
                android:id="@+id/continue_button"/>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/continue_button"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:paddingVertical="12dp"
                android:layout_marginTop="24dp"
                android:text="@string/logout_text"
                android:fontFamily="@font/spd_medium"
                android:id="@+id/sign_out_text"/>



        </RelativeLayout>
    </ScrollView>

</RelativeLayout>