<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cart.CartActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainrel">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:padding="16dp"
            android:gravity="center_vertical"
            android:background="@drawable/header_gradient"
            android:id="@+id/header_rel">



            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:padding="5dp"
                android:src="@drawable/ic_back"
                android:id="@+id/back"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart_header"
                android:textSize="30dp"
                android:layout_toRightOf="@id/back"
                android:layout_marginStart="8dp"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/bodoni"
                android:textColor="@color/black"
                android:id="@+id/header_text"/>


<!--            <ImageView-->
<!--                android:layout_width="36dp"-->
<!--                android:layout_height="36dp"-->
<!--                android:layout_alignParentEnd="true"-->
<!--                android:src="@drawable/ic_cart"-->
<!--                android:layout_gravity="end|center_vertical"-->
<!--                android:id="@+id/cart_image"/>-->

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            android:layout_below="@id/header_rel"
            android:weightSum="3"
            android:id="@+id/contact_rel">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@drawable/grey_rounded_corners"
                android:paddingVertical="12dp"
                android:layout_weight="1"
                android:id="@+id/whatsapp_rel">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="@string/enquire_text"
                android:textColor="@color/black"
                android:fontFamily="@font/hoefler_regular"
                android:id="@+id/enquire_text"
                />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_whatsapp"
                    android:layout_marginStart="8dp"
                    android:id="@+id/whatsapp_image"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24dp"
                android:text="- OR -"
                android:gravity="center"
                android:textColor="@color/black"
                android:fontFamily="@font/hoefler_regular"
                android:layout_weight="1"
                android:id="@+id/or_text"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@drawable/grey_rounded_corners"
                android:layout_weight="1"
                android:paddingVertical="12dp"
                android:id="@+id/call_rel">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/call_us_text"
                    android:textColor="@color/black"
                    android:fontFamily="@font/hoefler_regular"
                    android:id="@+id/call_text"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_call"
                    android:layout_marginStart="8dp"
                    android:id="@+id/call_image"/>

            </LinearLayout>


        </LinearLayout>



        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:lottie_rawRes="@raw/cart_empty"
            android:layout_centerInParent="true"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            android:id="@+id/lottieAnimationView"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/hoefler_regular"
            android:text="@string/empty_cart"
            android:textSize="36dp"
            android:visibility="gone"
            android:textColor="@color/black"
            android:layout_below="@id/lottieAnimationView"
            android:layout_centerHorizontal="true"
            android:id="@+id/empty_cart_text"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/contact_rel"
            android:layout_marginTop="40dp"
            android:paddingBottom="16dp"
            android:layout_marginHorizontal="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:clipToPadding="false"
            android:id="@+id/cart_recycler_view"
            >
        </androidx.recyclerview.widget.RecyclerView>


    </RelativeLayout>

</RelativeLayout>