<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_designer_background"
    tools:context=".Login.ProfileActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:id="@+id/mainrel">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="5dp"
            android:src="@drawable/ic_back_white"
            android:id="@+id/back"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:text="@string/company_name"
            android:textColor="@color/white"
            android:fontFamily="@font/bodoni"
            android:textSize="36dp"
            android:id="@+id/company_name_text"/>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_alignParentEnd="true"
            android:padding="5dp"
            android:src="@drawable/ic_check_white"
            android:id="@+id/save"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/company_name_text"
            android:layout_marginTop="36dp"
            android:text="@string/profile_text"
            android:textColor="@color/white"
            android:fontFamily="@font/hoefler_regular"
            android:textSize="24dp"
            android:id="@+id/profile_text"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/white"
            android:layout_below="@id/profile_text"
            android:text="@string/country_code"
            android:textColor="@color/white"
            android:enabled="false"
            android:fontFamily="@font/spd_medium"
            android:id="@+id/country_code"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:textSize="18dp"
            android:maxLength="10"
            android:layout_below="@id/profile_text"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/white"
            android:layout_toRightOf="@id/country_code"
            android:inputType="phone"
            android:hint="Phone Number"
            android:textColor="@color/white"
            android:textColorHint="@color/hintGrey"
            android:fontFamily="@font/spd_medium"
            android:id="@+id/et_phone"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/et_phone"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/white"
            android:hint="Name"
            android:textColorHint="@color/hintGrey"
            android:textColor="@color/white"
            android:inputType="textCapWords"
            android:fontFamily="@font/spd_medium"
            android:id="@+id/et_name"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/et_name"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/white"
            android:hint="Company Name"
            android:textColorHint="@color/hintGrey"
            android:textColor="@color/white"
            android:inputType="textCapWords"
            android:fontFamily="@font/spd_medium"
            android:id="@+id/et_company_name"/>

        <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/et_company_name"
        android:layout_marginTop="16dp"
            android:backgroundTint="@color/white"
        android:hint="GST Number"
        android:textColorHint="@color/hintGrey"
        android:textColor="@color/white"
        android:inputType="textCapCharacters"
        android:fontFamily="@font/spd_medium"
        android:id="@+id/et_gst_no"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/et_gst_no"
            android:layout_marginTop="16dp"
            android:hint="City"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/hintGrey"
            android:textColor="@color/white"
            android:inputType="textCapCharacters"
            android:fontFamily="@font/spd_medium"
            android:id="@+id/et_city"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/et_city"
            android:layout_marginTop="16dp"
            android:hint="State"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/hintGrey"
            android:textColor="@color/white"
            android:inputType="textCapCharacters"
            android:fontFamily="@font/spd_medium"
            android:id="@+id/et_state"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_state"
            android:layout_marginTop="60dp"
            android:paddingVertical="18dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/white_rounded_corners"
            android:fontFamily="@font/spd_medium"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:text="Logout"
            android:id="@+id/logout_button"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logout_button"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textColor="@color/linkBlue"
            android:textSize="18dp"
            android:paddingVertical="12dp"
            android:layout_marginTop="36dp"
            android:text="@string/queries_text"
            android:fontFamily="@font/spd_medium"
            android:id="@+id/contact_us_text"/>


    </RelativeLayout>

    </ScrollView>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/progressBar"/>

</RelativeLayout>

